--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.5.6",
     "postcss-import": "^15.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
